--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WorkingTimeLogger</string>
-    <string name="select_wifi">select wifi</string>
+    <string name="settings">Settings</string>
+    <string name="select_wifi">Select wifi</string>
 </resources>
